<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/white"
    android:layout_margin="8dp"
    android:elevation="2dp">

    <TextView
        android:id="@+id/bid_id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bid_id_label"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/property_id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/property_id_text"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bid_amount_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bid_amount"
        android:textSize="14sp"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/bid_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bid_time"
        android:textSize="14sp"
        android:layout_marginTop="4dp"/>


    <TextView
        android:id="@+id/bid_status_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bid_status"
        android:textSize="14sp"
        android:layout_marginTop="14sp"/>

    <Button
        android:id="@+id/withdraw_bids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"
        android:visibility="visible" />



</LinearLayout>
