<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/wallet_address_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_address"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/f_name_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/l_name_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/l_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/role_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/role_string"
        android:textSize="14sp" />
</LinearLayout>
